# dwarfs-in-exile

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-debug  build-release  deploy.sh  prepare-test  release  run  run-debug  run-release
.github/workflows/: deploy.yml
client/: Cargo.toml  Makefile.toml  index.html
client/src/: images.rs  lib.rs
server/: Cargo.toml  data.db
server-old/: .env  Cargo.toml
server-old/migrations/2022-06-24-125120_messages/: up.sql
server-old/src/: main.rs  schema.rs
server/public/: ads.txt  manifest.json  offline.html  privacy-policy.html  style.css  sw.js
server/public/.well-known/: assetlinks.json
server/src/: about.rs  admin.rs  auth.rs  db.rs  error.rs  game.rs  index.rs  main.rs  model.rs  store.rs  stripe.rs  wiki.rs
server/src/auth/: account.rs  change_password.rs  change_username.rs  delete_account.rs  login.rs  logout.rs  register.rs  store.rs
server/templates/: about.html  account.html  admin.html  base.html  change-password.html  change-username.html  delete-account.html  game-select.html  game.html  index.html  login.html  nav.html  register-guest.html  register.html  store.html  valhalla.html  wiki.html
shared/: Cargo.toml
shared/src/: items.rs  lib.rs
