[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rmp-serde = "1.1.0"
ws = { version = "0.9.2" }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"