[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.5", features = ["ws", "headers"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rmp-serde = "1.1.0"
futures-util = "0.3"
axum-sessions = "0.1"
validator = { version = "0.15.0", features = ["derive"] }
async-trait = "0.1"
http-body = "0.4.3"
thiserror = "1.0"
