[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
enum-iterator = { version = "1.4.1" }
log = "0.4.19"
strum = { version = "0.25", features = ["derive"] }
fxhash = "0.2"
endian-hasher = "0.1"
engine-shared = { path = "../../browsergame-engine/shared" }
